--- a/GestionInventaireWebApp/GestionInventaireWebApp.csproj
+++ b/GestionInventaireWebApp/GestionInventaireWebApp.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Vse.Web.Serialization.ControlledSerializationJsonConverter" Version="1.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Articles\" />
+  </ItemGroup>
+
 </Project>
